/**
  * All the GUI settings.
  */
package Protos.GUI;

message Settings {
   optional string core_address = 1 [default = "localhost"];
   optional uint32 core_port = 2 [default = 59485];
   optional uint32 max_chat_message_displayed = 3 [default = 500];
   optional uint32 reconnect_period = 4 [default = 1000]; // [ms].
   optional uint32 search_time = 5 [default = 3000]; // [ms].
   optional uint32 socket_timeout = 6 [default = 5000]; // [ms].
}